<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PortKey</string>
    <string name="app_name_display">🔑 PortKey</string>

    <!-- Login Screen -->
    <string name="login_tagline">Intelligent Customs Clearance</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="login_register_link">Don\'t have an account? Register</string>

    <!-- Register Screen -->
    <string name="register_title">Create Account</string>
    <string name="register_subtitle">Join PortKey to manage your shipments</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="btn_register">Create Account</string>
    <string name="register_login_link">Already have an account? Login</string>

    <!-- Home Screen -->
    <string name="home_title">Active Shipments</string>
    <string name="fab_create_shipment">Create Shipment</string>
    <string name="empty_shipments_title">No shipments yet</string>
    <string name="empty_shipments_subtitle">Tap + to create your first shipment</string>
</resources>
